# uniprotlib

./: .gitignore  LICENSE  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: api.md  idmapping.md  index.md  llms.txt  xml.md
example_files/: uniprot.xsd
tests/: conftest.py  test_idmapping.py  test_parser.py
tests/files/: Q9Y261.xml
uniprot_tools/: parser.py
uniprotlib/: __init__.py  idmapping.py  models.py  parser.py
