[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "uniprotlib"
dynamic = ["version"]
description = "Python library for parsing UniProt XML data"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
